WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202173
[iOS] Regression(
r249703
) frequent 'kill() returned unexpected error' log messages
https://bugs.webkit.org/show_bug.cgi?id=202173
Summary
[iOS] Regression(r249703) frequent 'kill() returned unexpected error' log mes...
Chris Dumez
Reported
2019-09-24 15:10:50 PDT
Frequent 'kill() returned unexpected error' log messages when using other apps than Safari since
r249703
.
Attachments
Patch
(5.74 KB, patch)
2019-09-24 16:35 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-24 16:35:26 PDT
Created
attachment 379513
[details]
Patch
Chris Dumez
Comment 2
2019-09-24 16:36:17 PDT
<
rdar://problem/55631075
>
Geoffrey Garen
Comment 3
2019-09-24 17:06:35 PDT
Comment on
attachment 379513
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-09-24 18:56:56 PDT
Comment on
attachment 379513
[details]
Patch Clearing flags on attachment: 379513 Committed
r250329
: <
https://trac.webkit.org/changeset/250329
>
WebKit Commit Bot
Comment 5
2019-09-24 18:56:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug