Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp
@@ -111,34 +111,34 @@ AuxiliaryProcessProxy::State AuxiliaryProcessProxy::state() const
     if (m_processLauncher && m_processLauncher->isLaunching())
         return AuxiliaryProcessProxy::State::Launching;
 
-    // There is sometimes a delay until we get the notification from mach about the connection getting closed.
-    // To help detect terminated process earlier, we also check that the PID is for a valid running process.
-    if (!m_connection || !isRunningProcessPID(processIdentifier()))
+    if (!m_connection)
         return AuxiliaryProcessProxy::State::Terminated;
 
     return AuxiliaryProcessProxy::State::Running;
 }
 
-bool AuxiliaryProcessProxy::isRunningProcessPID(ProcessID pid)
+bool AuxiliaryProcessProxy::wasTerminated() const
 {
-    if (!pid)
+    switch (state()) {
+    case AuxiliaryProcessProxy::State::Launching:
         return false;
-
-#if PLATFORM(COCOA)
-    // Use kill() with a signal of 0 to check if there is actually still a process with the given PID.
-    if (!kill(pid, 0))
+    case AuxiliaryProcessProxy::State::Terminated:
         return true;
-
-    if (errno == ESRCH) {
-        // No process can be found corresponding to that specified by pid.
-        return false;
+    case AuxiliaryProcessProxy::State::Running:
+        break;
     }
 
-    RELEASE_LOG_ERROR(Process, "kill() returned unexpected error %d", errno);
-    return true;
+    auto pid = processIdentifier();
+    if (!pid)
+        return true;
+
+#if PLATFORM(COCOA)
+    // Use kill() with a signal of 0 to make sure there is indeed still a process with the given PID.
+    // This is needed because it sometimes takes a little bit of time for us to get notified that a process
+    // was terminated.
+    return kill(pid, 0) && errno == ESRCH;
 #else
-    UNUSED_PARAM(pid);
-    return true;
+    return false;
 #endif
 }
 
